[workspace]
resolver = "2"
members = ["inband-traceroute", "inband-traceroute-common", "inband-traceroute-ebpf"]
default-members = ["inband-traceroute", "inband-traceroute-common"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", features = ["derive"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
axum = {version = "0.8.3", features = ["http2"] }
rustls-acme = { version = "0.13.0", features = ["axum"] }
etherparse = "0.17"
tokio-stream = "0.1.17"
axum-server = "0.7.2"
async-stream = "0.3.6"

[profile.release.package.inband-traceroute-ebpf]
debug = 2
codegen-units = 1
