[workspace]
resolver = "2"
members = ["inband-traceroute", "inband-traceroute-common", "inband-traceroute-ebpf"]
default-members = ["inband-traceroute", "inband-traceroute-common"]

[workspace.package]
license = "AGPL-3.0-only"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
# TODO: Revert to cargo after a new release of aya-build is created
aya-build = { git = "https://github.com/aya-rs/aya" }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", features = ["derive"] }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }
socket2 = "0.4"

hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
axum = {version = "0.8.3", features = ["http2"] }
rustls-acme = { version = "0.13.0", features = ["axum"] }
network-types = "0.0.7"
tokio-stream = "0.1.17"
axum-server = "0.7.2"
async-stream = "0.3.6"
http = "1.3.1"

tower-http = {version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }

serde_derive = "1.0.219"
serde = "1.0.219"

bytes = "1"
rand = "0.8"
futures = "0.3.31"
etherparse = "0.17.0"
nix = { version = "0.30.1", features = ["time"] }
maxminddb = "0.26.0"
hickory-client = "0.25.2"

[profile.release.package.inband-traceroute-ebpf]
debug = 2
codegen-units = 1
