[package]
name = "inband-traceroute-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
inband-traceroute-common = { path = "../inband-traceroute-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "inband-traceroute"
path = "src/main.rs"
